[gd_scene load_steps=5 format=3 uid="uid://dwmt5jyjfc3sr"]

[ext_resource type="Script" path="res://Objects/towers/Archer/Archer.gd" id="1_tid5c"]
[ext_resource type="Texture2D" uid="uid://d3gxpe2u4iiy4" path="res://assets/towers/Archer/Archer Body.png" id="2_bvta0"]
[ext_resource type="Texture2D" uid="uid://cv1cs8ghpw7um" path="res://assets/towers/Archer/Archer Head.png" id="3_udr3n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ycxrn"]
radius = 320.1

[node name="Archer" type="Node2D"]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
script = ExtResource("1_tid5c")
metadata/_edit_group_ = true

[node name="ArcherBody" type="Sprite2D" parent="."]
texture = ExtResource("2_bvta0")

[node name="ArcherHead" type="Sprite2D" parent="."]
scale = Vector2(1.4, 1.4)
texture = ExtResource("3_udr3n")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="attackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
shape = SubResource("CircleShape2D_ycxrn")
metadata/_edit_group_ = true

[node name="bullets" type="Node" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="body_entered" from="attackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attackArea" to="." method="_on_attack_area_body_exited"]
